# spf-msa-cuentas/src/main/java/com/bce/cuentas/infrastructure/output/repository/IMovimientoRepo.java
@@ -1,31 +1,24 @@
-/**
- * 
- */
 package com.bce.cuentas.infrastructure.output.repository;
 
+import com.bce.cuentas.domain.AccountStateReport;
 import com.bce.cuentas.infrastructure.output.repository.entity.Movements;
 import com.bce.cuentas.infrastructure.output.repository.repo.IGenericRepo;
 import org.springframework.data.r2dbc.repository.Query;
 import org.springframework.data.repository.query.Param;
+import reactor.core.publisher.Flux;
 
 import java.time.LocalDate;
+import java.util.Date;
 import java.util.List;
 
-/**
- * @author edwinleon
- *
- */
 public interface IMovimientoRepo extends IGenericRepo<Movements, Long> {
 
-	@Query(value = "select m.fecha, c.nombre, cu.numero_cuenta, case when cu.tipo_cuenta = 'C' then 'Corriente' when cu.tipo_cuenta = 'A' then 'Ahorros' end, cu.saldo_inicial, cu.estado, m.valor, m.saldo "
-			+ "from cliente c, cuenta cu, movimiento m where c.id = cu.id_cliente "
-			+ "and cu.id_cuenta  = m.id_cuenta and m.fecha between (:p1) and (:p2) "
-			+ "and c.id = (:p3)")
-	List<Object[]> reporteMovimientos(@Param("p1") LocalDate fechaInicio, @Param("p2") LocalDate fechaFin,
-			@Param("p3") Long idCliente);
-	
-	List<Movements> findByIdCuenta(Long idCuenta);
-	
-	
+    @Query("SELECT M.FECHA, P.nombre  AS CLIENTE, C.NUMERO_CUENTA, C.TIPO_CUENTA AS TIPO, M.saldo , M.VALOR AS MOVIMIENTO, M.SALDO AS SALDO_DISPONIBLE, 'true' ESTADO \n" +
+            "FROM MOVIMIENTOS M \n" +
+            "  INNER JOIN CUENTA C ON M.id_cuenta  = C.id_cuenta  \n" +
+            "  INNER JOIN CLIENTE C2 ON C2.cliente_id  = C.cliente_id  \n" +
+            "  INNER JOIN PERSONA P ON P.id  = C2.persona_id  \n" +
+            "  WHERE P.IDENTIFICACION = :identificacion")
+    Flux<AccountStateReport> findEstadoCuentaByFechas(String identificacion);
 
 }
